trying to fix image on mobile

--- a/css/main.sass
+++ b/css/main.sass
@@ -240,7 +240,7 @@ body
     right: 0
     bottom: 0
     overflow: hidden
-    @media(min-width: 700px)
+    @media(min-width: 100px)
       .post-image-image
         background-size: cover
         position: absolute
